--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -30,6 +30,10 @@ jobs:
         IMAGE_TAG: ${{ github.sha }}
       with:
         args: set image deployment/$ECR_REPOSITORY $ECR_REPOSITORY=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+      run: |  
+        echo ${ECR_REGISTRY}
+        echo ${ECR_REPOSITORY}
+        echo ${IMAGE_TAG}
         
     - name: verify deployment
       uses: kodermax/kubectl-aws-eks@master
